Addmusic2/Model/AntlrSchema/SfxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Projects/Visual Studio/Addmusic2/Addmusic2/Addmusic2/Sfx.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SfxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		POUND=1, DOLLAR=2, COMMAT=3, AMPER=4, LBRACE=5, RBRACE=6, SHARP=7, FLAT=8, 
		DOT=9, TIE=10, GT=11, LT=12, COMMA=13, EQUAL=14, SEMICOLON=15, Note=16, 
		Rest=17, Octave=18, Volume=19, Tie=20, Instrument=21, Length=22, Asm=23, 
		Jsr=24, NDD=25, NE0=26, JsrIdentifier=27, AsmTextBlock=28, NUMBERS=29, 
		UNUMBERS=30, HexNumber=31, WHITESPACE=32, Comment=33;
	public const int
		RULE_soundEffect = 0, RULE_soundEffectElement = 1, RULE_specialDirective = 2, 
		RULE_asm = 3, RULE_jsr = 4, RULE_atomics = 5, RULE_note = 6, RULE_rest = 7, 
		RULE_octave = 8, RULE_lowerOctave = 9, RULE_raiseOctave = 10, RULE_pitchslide = 11, 
		RULE_volumeCommand = 12, RULE_defaultLength = 13, RULE_instrumentCommand = 14, 
		RULE_triplet = 15, RULE_nakedTie = 16, RULE_hexCommands = 17, RULE_ddPitchBlendCommand = 18, 
		RULE_ddPitchBlendItems = 19, RULE_e0SfxPriority = 20, RULE_hexNumber = 21;
	public static readonly string[] ruleNames = {
		"soundEffect", "soundEffectElement", "specialDirective", "asm", "jsr", 
		"atomics", "note", "rest", "octave", "lowerOctave", "raiseOctave", "pitchslide", 
		"volumeCommand", "defaultLength", "instrumentCommand", "triplet", "nakedTie", 
		"hexCommands", "ddPitchBlendCommand", "ddPitchBlendItems", "e0SfxPriority", 
		"hexNumber"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'$'", "'@'", "'&'", "'{'", "'}'", "'+'", "'-'", "'.'", "'^'", 
		"'>'", "'<'", "','", "'='", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "POUND", "DOLLAR", "COMMAT", "AMPER", "LBRACE", "RBRACE", "SHARP", 
		"FLAT", "DOT", "TIE", "GT", "LT", "COMMA", "EQUAL", "SEMICOLON", "Note", 
		"Rest", "Octave", "Volume", "Tie", "Instrument", "Length", "Asm", "Jsr", 
		"NDD", "NE0", "JsrIdentifier", "AsmTextBlock", "NUMBERS", "UNUMBERS", 
		"HexNumber", "WHITESPACE", "Comment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Sfx.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SfxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SfxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SfxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SoundEffectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public E0SfxPriorityContext e0SfxPriority() {
			return GetRuleContext<E0SfxPriorityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SoundEffectElementContext[] soundEffectElement() {
			return GetRuleContexts<SoundEffectElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SoundEffectElementContext soundEffectElement(int i) {
			return GetRuleContext<SoundEffectElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SfxParser.Eof, 0); }
		public SoundEffectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_soundEffect; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterSoundEffect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitSoundEffect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSoundEffect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SoundEffectContext soundEffect() {
		SoundEffectContext _localctx = new SoundEffectContext(Context, State);
		EnterRule(_localctx, 0, RULE_soundEffect);
		int _la;
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LBRACE:
			case GT:
			case LT:
			case Note:
			case Rest:
			case Octave:
			case Volume:
			case Tie:
			case Instrument:
			case Length:
			case Asm:
			case Jsr:
			case NDD:
			case NE0:
			case HexNumber:
				EnterOuterAlt(_localctx, 1);
				{
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NE0) {
					{
					State = 44;
					e0SfxPriority();
					}
				}

				State = 48;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 47;
					soundEffectElement();
					}
					}
					State = 50;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2214533152L) != 0) );
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SoundEffectElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SpecialDirectiveContext specialDirective() {
			return GetRuleContext<SpecialDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtomicsContext atomics() {
			return GetRuleContext<AtomicsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HexCommandsContext hexCommands() {
			return GetRuleContext<HexCommandsContext>(0);
		}
		public SoundEffectElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_soundEffectElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterSoundEffectElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitSoundEffectElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSoundEffectElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SoundEffectElementContext soundEffectElement() {
		SoundEffectElementContext _localctx = new SoundEffectElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_soundEffectElement);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Asm:
			case Jsr:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55;
				specialDirective();
				}
				break;
			case LBRACE:
			case GT:
			case LT:
			case Note:
			case Rest:
			case Octave:
			case Volume:
			case Tie:
			case Instrument:
			case Length:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56;
				atomics();
				}
				break;
			case NDD:
			case HexNumber:
				EnterOuterAlt(_localctx, 3);
				{
				State = 57;
				hexCommands();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecialDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AsmContext asm() {
			return GetRuleContext<AsmContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JsrContext jsr() {
			return GetRuleContext<JsrContext>(0);
		}
		public SpecialDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specialDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterSpecialDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitSpecialDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecialDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecialDirectiveContext specialDirective() {
		SpecialDirectiveContext _localctx = new SpecialDirectiveContext(Context, State);
		EnterRule(_localctx, 4, RULE_specialDirective);
		try {
			State = 62;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Asm:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				asm();
				}
				break;
			case Jsr:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				jsr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsmContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Asm() { return GetToken(SfxParser.Asm, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JsrIdentifier() { return GetToken(SfxParser.JsrIdentifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AsmTextBlock() { return GetToken(SfxParser.AsmTextBlock, 0); }
		public AsmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterAsm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitAsm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AsmContext asm() {
		AsmContext _localctx = new AsmContext(Context, State);
		EnterRule(_localctx, 6, RULE_asm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(Asm);
			State = 65;
			Match(JsrIdentifier);
			State = 66;
			Match(AsmTextBlock);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JsrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Jsr() { return GetToken(SfxParser.Jsr, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JsrIdentifier() { return GetToken(SfxParser.JsrIdentifier, 0); }
		public JsrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jsr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterJsr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitJsr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJsr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JsrContext jsr() {
		JsrContext _localctx = new JsrContext(Context, State);
		EnterRule(_localctx, 8, RULE_jsr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(Jsr);
			State = 69;
			Match(JsrIdentifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomicsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PitchslideContext pitchslide() {
			return GetRuleContext<PitchslideContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NoteContext note() {
			return GetRuleContext<NoteContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RestContext rest() {
			return GetRuleContext<RestContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OctaveContext octave() {
			return GetRuleContext<OctaveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LowerOctaveContext lowerOctave() {
			return GetRuleContext<LowerOctaveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RaiseOctaveContext raiseOctave() {
			return GetRuleContext<RaiseOctaveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VolumeCommandContext volumeCommand() {
			return GetRuleContext<VolumeCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefaultLengthContext defaultLength() {
			return GetRuleContext<DefaultLengthContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstrumentCommandContext instrumentCommand() {
			return GetRuleContext<InstrumentCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NakedTieContext nakedTie() {
			return GetRuleContext<NakedTieContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TripletContext triplet() {
			return GetRuleContext<TripletContext>(0);
		}
		public AtomicsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomics; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterAtomics(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitAtomics(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtomics(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomicsContext atomics() {
		AtomicsContext _localctx = new AtomicsContext(Context, State);
		EnterRule(_localctx, 10, RULE_atomics);
		try {
			State = 82;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				pitchslide();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 72;
				note();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 73;
				rest();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 74;
				octave();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 75;
				lowerOctave();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 76;
				raiseOctave();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 77;
				volumeCommand();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 78;
				defaultLength();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 79;
				instrumentCommand();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 80;
				nakedTie();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 81;
				triplet();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NoteContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Note() { return GetToken(SfxParser.Note, 0); }
		public NoteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_note; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterNote(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitNote(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNote(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NoteContext note() {
		NoteContext _localctx = new NoteContext(Context, State);
		EnterRule(_localctx, 12, RULE_note);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			Match(Note);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RestContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Rest() { return GetToken(SfxParser.Rest, 0); }
		public RestContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rest; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterRest(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitRest(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRest(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RestContext rest() {
		RestContext _localctx = new RestContext(Context, State);
		EnterRule(_localctx, 14, RULE_rest);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(Rest);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OctaveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Octave() { return GetToken(SfxParser.Octave, 0); }
		public OctaveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_octave; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOctave(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OctaveContext octave() {
		OctaveContext _localctx = new OctaveContext(Context, State);
		EnterRule(_localctx, 16, RULE_octave);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			Match(Octave);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LowerOctaveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(SfxParser.LT, 0); }
		public LowerOctaveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lowerOctave; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterLowerOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitLowerOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLowerOctave(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LowerOctaveContext lowerOctave() {
		LowerOctaveContext _localctx = new LowerOctaveContext(Context, State);
		EnterRule(_localctx, 18, RULE_lowerOctave);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(LT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RaiseOctaveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(SfxParser.GT, 0); }
		public RaiseOctaveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_raiseOctave; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.EnterRaiseOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISfxListener typedListener = listener as ISfxListener;
			if (typedListener != null) typedListener.ExitRaiseOctave(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISfxVisitor<TResult> typedVisitor = visitor as ISfxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRaiseOctave(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RaiseOctaveContext raiseOctave() {
		RaiseOctaveContext _localctx = new RaiseOctaveContext(Context, State);
		EnterRule(_localctx, 20, RULE_raiseOctave);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
